<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/perguntaQuestao2"
        android:layout_width="296dp"
        android:layout_height="100dp"
        android:layout_marginTop="56dp"
        android:text="@string/perguntaQuestao2"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupQuestao2"
        android:layout_width="287dp"
        android:layout_height="251dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/perguntaQuestao2" >

        <RadioButton
            android:id="@+id/radioButtonOpcao1Questao2"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:text="@string/opcao1Questao2" />

        <RadioButton
            android:id="@+id/radioButtonOpcao2Questao2"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:text="@string/opcao2Questao2" />

        <RadioButton
            android:id="@+id/radioButtonOpcao3Questao2"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:text="@string/opcao3Questao2" />

        <RadioButton
            android:id="@+id/radioButtonOpcao4Questao2"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:text="@string/opcao4Questao2" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonProximoQuestao2"
        android:layout_width="178dp"
        android:layout_height="63dp"
        android:onClick="proxima"
        android:text="@string/botaoProximo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupQuestao2" />

</androidx.constraintlayout.widget.ConstraintLayout>