<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/perguntaQuestao4"
        android:layout_width="296dp"
        android:layout_height="100dp"
        android:layout_marginTop="56dp"
        android:text="@string/perguntaQuestao4"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupQuestao4"
        android:layout_width="287dp"
        android:layout_height="251dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/perguntaQuestao4" >

        <RadioButton
            android:id="@+id/radioButtonOpcao1Questao4"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:text="@string/opcao1Questao4" />

        <RadioButton
            android:id="@+id/radioButtonOpcao2Questao4"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:text="@string/opcao2Questao4" />

        <RadioButton
            android:id="@+id/radioButtonOpcao3Questao4"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:text="@string/opcao3Questao4" />

        <RadioButton
            android:id="@+id/radioButtonOpcao4Questao4"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:text="@string/opcao4Questao4" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonProximoQuestao4"
        android:layout_width="178dp"
        android:layout_height="63dp"
        android:onClick="proxima"
        android:text="@string/botaoProximo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupQuestao4" />

</androidx.constraintlayout.widget.ConstraintLayout>