<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/perguntaQuestao5"
        android:layout_width="304dp"
        android:layout_height="47dp"
        android:layout_marginTop="56dp"
        android:text="@string/perguntaQuestao5"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupQuestao5"
        android:layout_width="287dp"
        android:layout_height="251dp"
        android:layout_marginTop="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/perguntaQuestao5">

        <RadioButton
            android:id="@+id/radioButtonOpcao1Questao5"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:text="@string/opcao1Questao5" />

        <RadioButton
            android:id="@+id/radioButtonOpcao2Questao5"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:text="@string/opcao2Questao5" />

        <RadioButton
            android:id="@+id/radioButtonOpcao3Questao5"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:text="@string/opcao3Questao5" />

        <RadioButton
            android:id="@+id/radioButtonOpcao4Questao5"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:text="@string/opcao4Questao5" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonProximoQuestao5"
        android:layout_width="178dp"
        android:layout_height="63dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="88dp"
        android:onClick="proxima"
        android:text="@string/botaoProximo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupQuestao5"
        app:layout_constraintVertical_bias="0.741" />

</androidx.constraintlayout.widget.ConstraintLayout>